@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Add missing version info to Info/Table
+    - Fix event in global destruction bug (#827)
 
 1.302162  2019-02-05 19:55:14-08:00 America/Los_Angeles
 
